# b2b

./: .dockerignore  .gitignore  .tmp_utf8_test.txt  Makefile  README.md  docker-compose.product.yml  docker-compose.yml
services/gateway_api/: Dockerfile  pyproject.toml
services/gateway_api/tests/: conftest.py  test_contract.py  test_security.py  utils.py
services/product_api/: Dockerfile  alembic.ini  pyproject.toml
services/product_api/alembic/: env.py
services/product_api/tests/: conftest.py  test_admin_claims.py  test_chat_user_limits.py  test_company_admin_detach.py  test_company_admin_limits.py  test_company_admin_summary.py  test_idempotency.py  test_internal_whoami_profile.py  test_invite_invariants.py  test_invite_ttl.py  test_last_n.py  test_onboarding.py  test_public_claims.py  test_public_claims_contact.py  test_public_claims_payment.py  test_public_claims_preview.py  test_rbac.py  test_superadmin_hardening.py  utils.py
services/product_api/tests_unit/: conftest.py  test_admin_claims_api.py  test_admin_claims_auth.py  test_auth_confirm_get.py  test_claims_admin_auth.py  test_claims_admin_service.py  test_claims_contact.py  test_claims_datanewton_client.py  test_claims_datanewton_parser.py  test_claims_extraction.py  test_claims_fio_ai_settings.py  test_claims_gateway_adapter.py  test_claims_generation.py  test_claims_normalization.py  test_claims_notifications.py  test_claims_payment.py  test_claims_person_name_ai_prompts.py  test_claims_person_name_ai_service.py  test_claims_preview_api.py  test_claims_preview_header_enrichment_ai.py  (+9 more)
(+170 files in other folders)
